# cli-vc-wallet

./: .env.template  .gitignore  Cargo.toml  README.md  example_badge.json  offer_localhost.txt  offer_ngrok.txt  offer_poc15.txt
src/: cli.rs  cli_flow.rs  credential.rs  http_client.rs  jwt.rs  main.rs  offer.rs  oidc.rs  output.rs  redirect_server.rs  redirect_server_success.html  verify.rs  well_known.rs
