[package]
name = "vi-cli-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dialoguer = "0.11.0"
env_logger = "0.11.7"
jsonwebtoken = "9.3.1"
openidconnect = { features = ["reqwest-blocking", "accept-rfc3339-timestamps"], version = "4.0.0" }
reqwest = { features = ["blocking"], version = "0.12.12" }
serde = { features = ["derive"], version = "1.0.218" }
serde_json = "1.0.140"
serde_qs = "0.13.0"
url = { features = ["serde"], version = "2.5.4" }
