[package]
name = "cli-vc-wallet"
version = "0.1.0"
edition = "2021"
default-run = "cli-vc-wallet"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
base64 = "0.22.1"
dialoguer = "0.11.0"
env_logger = "0.11.7"
jsonwebkey = { "features" = ["generate", "jwt-convert"], version = "0.3.5" }
jsonwebtoken = { "features" = ["use_pem"], version = "8.3.0" }
openidconnect = { features = ["reqwest", "accept-rfc3339-timestamps"], version = "4.0.0" }
reqwest = "0.12.12"
serde = { features = ["derive"], version = "1.0.218" }
serde_json = "1.0.140"
serde_qs = "0.13.0"
tokio = { features = ["full"], version = "1.44.1" }
url = { features = ["serde"], version = "2.5.4" }

[[bin]]
name = "cli-vc-wallet"
path = "src/main.rs"
